# gopher23

./: .gitignore  Cargo.toml
guide/: book.toml
guide/src/: SUMMARY.md  arrays.md  async.md  banner.md  banner2.md  cargo.md  database.md  dropping.md  enums_simple.md  futures.md  hashmaps.md  hello_world.md  move_by_default.md  peace.md  scope_functions.md  scope_return.md  serialize.md  structs.md  threads.md  variables_mutability_shadowing.md  vectors.md  webservice1.md  welcome.md  workspaces.md  wrap.md
projects/blog_client/: Cargo.toml
projects/blog_client/src/: main.rs
projects/blog_server/: Cargo.toml
projects/blog_server/src/: main.rs
projects/blog_server_db/: Cargo.toml
projects/blog_server_db/src/: main.rs
projects/chapters/c04_variables/: Cargo.toml
projects/chapters/c04_variables/src/: main.rs
projects/chapters/c05_scopes/: Cargo.toml
projects/chapters/c05_scopes/src/: main.rs
projects/chapters/c06_scope_fn/: Cargo.toml
projects/chapters/c06_scope_fn/src/: main.rs
projects/chapters/c07_lifetimes/: Cargo.toml
projects/chapters/c07_lifetimes/src/: main.rs
projects/chapters/c07_move_borrow_clone/: Cargo.toml
projects/chapters/c07_move_borrow_clone/src/: main.rs
projects/chapters/c08_structs/: Cargo.toml
projects/chapters/c08_structs/src/: main.rs
projects/chapters/c09_drop/: Cargo.toml
projects/chapters/c09_drop/src/: main.rs
projects/chapters/c09_drop_arc/: Cargo.toml
projects/chapters/c09_drop_arc/src/: main.rs
projects/chapters/c09_drop_move/: Cargo.toml
projects/chapters/c10_option/: Cargo.toml
projects/chapters/c10_result/: Cargo.toml
projects/chapters/c10_simple_login/: Cargo.toml
projects/chapters/c10_simple_login_enum/: Cargo.toml
projects/chapters/c10_simple_login_enum_with_dat/: Cargo.toml
projects/chapters/c10_simple_login_match/: Cargo.toml
projects/chapters/c10_simple_login_match_direct/: Cargo.toml
projects/chapters/c10_simple_login_match_is_exhaustive/: Cargo.toml
projects/chapters/c11_array/: Cargo.toml
projects/chapters/c11_array_search/: Cargo.toml
projects/chapters/c12_vector/: Cargo.toml
projects/chapters/c13_hashmap/: Cargo.toml
projects/chapters/c13_hashmap_bench/: Cargo.toml
projects/chapters/c14_serde_json/: Cargo.toml
projects/chapters/c14_serde_nested/: Cargo.toml
projects/chapters/c15_atomic/: Cargo.toml
projects/chapters/c15_channel/: Cargo.toml
projects/chapters/c15_hello_thread/: Cargo.toml
projects/chapters/c15_hello_thread_scope/: Cargo.toml
projects/chapters/c16_async_init/: Cargo.toml
projects/chapters/c16_async_init_easy/: Cargo.toml
projects/chapters/c17_async_channels/: Cargo.toml
projects/chapters/c17_futures/: Cargo.toml
projects/chapters/c17_futures_blocking/: Cargo.toml
projects/chapters/c17_futures_spawn_blocking/: Cargo.toml
projects/hello_server/: Cargo.toml
projects/hello_server/src/: main.rs
src/: main.rs
(+25 files in other folders)
