[package]
name = "gophercon2023"
version = "0.1.0"
edition = "2021"

[dependencies]

[workspace]
members = [
    "projects/hello_server",
    "projects/blog_server",
    "projects/blog_client",
    "projects/blog_server_db",

    # Per Chapter Content
    "projects/chapters/c01_hello_world",
    "projects/chapters/c04_variables",
    "projects/chapters/c05_scopes",
    "projects/chapters/c06_scope_fn",
    "projects/chapters/c07_move_borrow_clone",
    "projects/chapters/c07_lifetimes",
    "projects/chapters/c08_structs",
    "projects/chapters/c09_drop",
    "projects/chapters/c09_drop_move",
    "projects/chapters/c09_drop_arc",
    "projects/chapters/c10_simple_login",
    "projects/chapters/c10_simple_login_enum",
    "projects/chapters/c10_simple_login_enum_with_dat",
    "projects/chapters/c10_simple_login_match",
    "projects/chapters/c10_simple_login_match_direct",
    "projects/chapters/c10_simple_login_match_is_exhaustive",
    "projects/chapters/c10_option",
    "projects/chapters/c10_result",
    "projects/chapters/c11_array",
    "projects/chapters/c11_array_search",
    "projects/chapters/c12_vector",
    "projects/chapters/c13_hashmap",
    "projects/chapters/c13_hashmap_bench",
    "projects/chapters/c14_serde_json",
    "projects/chapters/c14_serde_nested",
    "projects/chapters/c15_hello_thread",
    "projects/chapters/c15_hello_thread_scope",
    "projects/chapters/c15_channel",
    "projects/chapters/c15_atomic",
    "projects/chapters/c16_async_init",
    "projects/chapters/c16_async_init_easy",
    "projects/chapters/c17_futures",
    "projects/chapters/c17_futures_blocking",
    "projects/chapters/c17_futures_spawn_blocking",
    "projects/chapters/c17_async_channels",
]

[source.crates-io]
replace-with = "vendored-sources"

[source.vendored-sources]
directory = "vendor"